Add Admin Auth to few apis.
